# openvino.genai

samples/cpp/lora_greedy_causal_lm/: CMakeLists.txt  lora_greedy_cb.cpp
tests/cpp/: helper.cpp
text_generation/causal_lm/cpp/: beam_search_causal_lm.cpp  continuous_batching.cpp  greedy_causal_lm.cpp  prompt_lookup_decoding_lm.cpp  speculative_decoding_lm.cpp
text_generation/causal_lm/cpp/continuous_batching/: Dockerfile  cache_manager.hpp  main.cpp
text_generation/causal_lm/cpp/continuous_batching/apps/: accuracy_sample.cpp  throughput_benchmark.cpp
text_generation/causal_lm/cpp/continuous_batching/python/: python.cpp
text_generation/causal_lm/cpp/continuous_batching/python/tests/: common.py  test_sampling.py
text_generation/causal_lm/cpp/llm_engine/: CMakeLists.txt
text_generation/causal_lm/cpp/llm_engine/lib/: CMakeLists.txt
text_generation/causal_lm/cpp/llm_engine/lib/include/: block_manager.hpp  model_config.hpp  paged_attention.hpp  sampler.hpp  scheduler.hpp
text_generation/causal_lm/cpp/llm_engine/lib/src/: paged_attention.cpp
